qt/quick/gen_qsgmaterial.h

class QSGMaterial;
class QSGMaterialShader;
class QSGMaterialType;
typedef struct QSGMaterial QSGMaterial;
typedef struct QSGMaterialShader QSGMaterialShader;
typedef struct QSGMaterialType QSGMaterialType;
QSGMaterial* QSGMaterial_new();
QSGMaterialType* QSGMaterial_type(const QSGMaterial* self);
QSGMaterialShader* QSGMaterial_createShader(const QSGMaterial* self);
int QSGMaterial_compare(const QSGMaterial* self, QSGMaterial* other);
int QSGMaterial_flags(const QSGMaterial* self);
void QSGMaterial_setFlag(QSGMaterial* self, int flags);
void QSGMaterial_setFlag2(QSGMaterial* self, int flags, bool on);
bool QSGMaterial_override_virtual_type(void* self, intptr_t slot);
bool QSGMaterial_override_virtual_createShader(void* self, intptr_t slot);
bool QSGMaterial_override_virtual_compare(void* self, intptr_t slot);
int QSGMaterial_virtualbase_compare(const void* self, QSGMaterial* other);
void QSGMaterial_delete(QSGMaterial* self);